[project]
name = "warehouse-management"
version = "0.1.0"
description = "Clean Architecture Warehouse Management System"
requires-python = ">=3.10"
readme = "README.md"

[tool.uv]
dependencies = [
    "SQLAlchemy==2.0.39",
]

[tool.uv.dev-dependencies]
dev = [
    "pylint==3.3.5",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"