[project]
name = "warehouse-management"
version = "0.1.0"
description = "Clean Architecture Warehouse Management System"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "SQLAlchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pylint==3.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false